@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-03-18 [O] Removed reference to oudated config setting 'display_social_bookmarks' (thread ID 64143) {GauGau}
 2010-03-18 [B] Fixed clickable keyword in file information (thread ID 64151) {eenemeenemuu}
 2010-03-18 [B] Fixed clickable keyword search (thread ID 64151) {eenemeenemuu}
 2010-03-17 [C] Fixed a lot of cosmetical issues with curve theme and IE7 {timoswelt}
